# mpc-compiler

./: .gitignore  Cargo.toml  README.md
crates/common/: Cargo.toml
crates/common/src/: crypto.rs  lib.rs  merkle.rs  types.rs
crates/party/: Cargo.toml
crates/party/src/: client.rs  gossip.rs  keys.rs  main.rs  p2p.rs  state.rs
crates/watchtower/: Cargo.toml
crates/watchtower/src/: api.rs  config.rs  main.rs  state.rs
